@@ -11,6 +11,8 @@
 * Worked on Super Admin state so that both DNA Seq Core links as well as all admin links are present. (tdisera)
 * Fixed problem with Data Track link when datatracks_supported property not present or set to 'N' (tdisera)
 * Added data track link to home page (tdisera)
+* Changed billing plug-in code to correctly handle Illumina target enrichment charges as price per capture, not per sample (tdisera)
+
 
 
 5.4.3
